[project]
name = "njspc-exporter"
version = "1.0.0"
description = "Prometheus Exporter for nodejs-poolController"
authors = [{ name = "Isaac Behrens", email = "isaac@behrenshome.com" }]
maintainers = [{ name = "Isaac Behrens", email = "isaac@behrenshome.com" }]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">= 3.10"
dependencies = ["prometheus_client", "urllib3"]

[project.urls]
Repository = "https://github.com/ibehren1/nodejs-poolController-prometheus-exporter.git"
Issues = "https://github.com/ibehren1/nodejs-poolController-prometheus-exporter/issues"
